# rust-solutions

./: .gitignore
base64-to-file/: 123  Cargo.toml  aac  base64aac  bm  hexaac
base64-to-file/src/: main.rs
catr/: Cargo.toml
catr/src/: lib.rs
catr/tests/: cli.rs
echor/: Cargo.toml
echor/src/: main.rs
echor/tests/: cli.rs
headr/: Cargo.toml
headr/src/: lib.rs  main.rs
hello/tests/: cli.rs
learning/: Cargo.toml
learning/src/: main.rs
minigrep/src/: lib.rs  main.rs
pgx_extension/: Cargo.toml  pgx_extension.control
pgx_extension/src/: lib.rs
reverse-proxy/: Cargo.toml  Settings.toml
reverse-proxy/src/: main.rs
reverse-proxy/tests/: test_commands.txt
sort_json/: Cargo.toml
sort_json/src/: main.rs
test-async/: Cargo.toml
test-async/src/: main.rs
