[package]
name = "reverse-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
warp-reverse-proxy = "0.5"
tokio = { version = "1", features = ["full"] }
serde_json = { version = "^1.0"}
config = "0.13.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }